<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">全民城管</string>
    <string name="picture_upload_tip_1">上传照片不能超过3张</string>
    <string name="picture_upload_tip_2">上传照片不能少于1张</string>
    <string name="bt_picture_report">拍照上传</string>
    <string name="bt_text_report">问题反映</string>
    <string name="bt_user_comm">在线互动</string>
    <string name="bt_user_center">个人中心</string>
    <string name="picker_from_camera">用相机拍照</string>
    <string name="picker_from_album">从相册选取</string>
    <string name="common_cancel">取消</string>
    <string name="report_time">上报时间:</string>
    <string name="report_location">上报地点:</string>
    <string name="report_phone">联系电话:</string>
    <string name="report_type">事件类型:</string>
    <string name="report_desc">图片描述:</string>
    <string name="report_ok">确认上传</string>
    <string name="report_pciture_capture">图片采集(1～3张):</string>
    
    <string name="report_desc_picture_hint">输入您对图片内容的简单描述(100字以内)</string>
    <string name="report_desc_text_hint">输入您对案件的简单描述(100字以内)</string>
    <string name="report_phone_hint">输入手机号码</string>
    <string name="text_report_type">案件大类:</string>
    <string name="text_report_sub_type">案件小类:</string>
    <string name="text_report_location">案件区域:</string>
    <string name="text_report_desc">案件描述:</string>
    <string name="user_report_user">"用户: %1$s"</string>
    <string name="user_report_score">"积分: %1$s 分"</string>
    <string name="user_report_history">"上报记录: %1$s 条"</string>
    <string name="user_msg_switch">系统消息: %1$s 条</string>
    <string name="app_about">关于全民城管</string>
    <string name="common_exit">退出登录</string>
    <string name="common_login">登录</string>
    <string name="common_user_login">用户登录</string>
    <string name="common_user_register">新用户注册</string>
    <string name="common_register">注册</string>
    <string name="user_login_hint_user_name">请输入11位手机号</string>
    <string name="user_login_hint_user_pwd">请输入6～16位密码</string>
    <string name="user_login_toast">请输入正确的用户名和密码</string>
    <string name="user_place">经度:%1$s,纬度:%2$s</string>
    <string name="picture_uploading">正在上传...</string>
    <string name="picture_upload_success">上传成功</string>
    <string-array name="issue_type">
        <item>游商占道</item>
        <item>沿街晾挂</item>
        <item>非法张贴小广告</item>
        <item>违规悬挂广告牌</item>
        <item>出摊占道</item>
        <item>非机动车乱停放</item>
        <item>建筑垃圾</item>
        <item>占道乱堆物</item>
        <item>工地夜间施工噪声</item>
        <item>商业宣传噪音</item>
        <item>占道设置桌椅喝茶打牌</item>
        <item>横幅乱吊乱挂</item>
        <item>占道修理非机动车</item>
        <item>其他</item>
    </string-array>
    <string-array name="issue_area">
        <item>江阳区</item>
        <item>纳溪区</item>
        <item>龙马潭区</item>
        <item>泸 县</item>
        <item>合江县</item>
        <item>叙永县</item>
        <item>古蔺县</item>
    </string-array>
    <string-array name="picture_type">
        <item>"非法停车"</item>
        <item>"市容市貌"</item>
        <item>"建筑噪音"</item>
        <item>"污水排放"</item>
        <item>"公共设施"</item>
        <item>"垃圾堆放"</item>
    </string-array>

</resources>