<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cp_main_background_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_camera"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/picker_from_camera"
        android:textColor="@color/np_major_text_color"
        android:textSize="@dimen/common_text_size_middle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/np_list_divider_bg" />

    <TextView
        android:id="@+id/text_album"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/picker_from_album"
        android:textColor="@color/np_major_text_color"
        android:textSize="@dimen/common_text_size_middle" >
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/np_list_divider_bg" />

    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ellipsize="middle"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/common_cancel"
        android:textColor="@color/np_major_text_color"
        android:textSize="@dimen/common_text_size_middle" >
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/np_list_divider_bg" />

</LinearLayout>