<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cp_main_background_color"
    android:orientation="vertical" >

    <include layout="@layout/common_title_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="6dp"
        android:gravity="left|center_vertical"
        android:text="@string/report_pciture_capture"
        android:textColor="@color/np_major_text_color"
        android:textSize="@dimen/common_text_size_middle" />

    <com.xmkj.citymanager.util.PictureHorizontalScrollview
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_margin="6dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>
    </com.xmkj.citymanager.util.PictureHorizontalScrollview>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/np_list_divider_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/picture_report_time"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:text="@string/report_time"
                    android:textColor="@color/np_major_text_color"
                    android:textSize="@dimen/common_text_size_middle" />

                <TextView
                    android:id="@+id/time_content"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp"
                    android:gravity="left|center_vertical"
                    android:text=""
                    android:textColor="@color/np_major_text_color"
                    android:textSize="@dimen/common_text_size_middle" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/np_list_divider_bg" />

            <LinearLayout
                android:id="@+id/picture_report_location"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:text="@string/report_location"
                    android:textColor="@color/np_major_text_color"
                    android:textSize="@dimen/common_text_size_middle" />

                <TextView
                    android:id="@+id/location_content"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp"
                    android:gravity="left|center_vertical"
                    android:text=""
                    android:textColor="@color/np_major_text_color"
                    android:textSize="@dimen/common_text_size_middle" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/np_list_divider_bg" />

            <LinearLayout
                android:id="@+id/picture_report_type"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/type_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:text="@string/report_type"
                    android:textColor="@color/np_major_text_color"
                    android:textSize="@dimen/common_text_size_middle" />

                <Spinner
                    android:id="@+id/type_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    style="@android:attr/spinnerDropDownItemStyle"
                    android:textColor="@color/np_major_text_color"
                    android:textSize="@dimen/common_text_size_middle" >
                </Spinner>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/np_list_divider_bg" />

            <LinearLayout
                android:id="@+id/picture_report_desc"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/desc_title"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/report_desc"
                    android:textColor="@color/np_major_text_color"
                    android:textSize="@dimen/common_text_size_middle" />

                <EditText
                    android:id="@+id/desc_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|top"
                    android:hint="@string/report_desc_picture_hint"
                    android:text=""
                    android:textColor="@color/np_major_text_color"
                    android:textSize="@dimen/common_text_size_middle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/np_list_divider_bg" />

    <Button
        android:id="@+id/ok_report"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        android:background="@color/np_common_bar_bg"
        android:text="@string/report_ok"
        android:textColor="@android:color/white"
        android:textSize="@dimen/common_text_size_middle" />

</LinearLayout>