<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cp_main_background_color"
    android:orientation="vertical" >

    <include layout="@layout/common_title_bar" />

    <RelativeLayout
        android:id="@+id/picture_report_time"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/time_title"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_person" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_alignTop="@id/time_title"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@id/time_title"
            android:gravity="left|bottom"
            android:text="张三"
            android:textColor="@color/np_major_text_color"
            android:textSize="@dimen/common_title_text_size" />

        <TextView
            android:id="@+id/user_gender"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_below="@id/user_name"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@id/time_title"
            android:gravity="left|center_vertical"
            android:text="男"
            android:textColor="@color/np_major_text_color"
            android:textSize="@dimen/common_text_size_middle" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/np_list_divider_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical" >

            <TextView
                
                android:id="@+id/user_msg_history"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="left|center_vertical"
                android:text="@string/user_report_history"
                android:textColor="@color/np_major_text_color"
                android:textSize="@dimen/common_title_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/np_list_divider_bg" />

            <TextView
                android:id="@+id/user_msg_switch"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="left|center_vertical"
                android:text="@string/user_msg_switch"
                android:textColor="@color/np_major_text_color"
                android:textSize="@dimen/common_title_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/np_list_divider_bg" />

            <TextView
                android:id="@+id/user_app_about"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="left|center_vertical"
                android:text="@string/app_about"
                android:textColor="@color/np_major_text_color"
                android:textSize="@dimen/common_title_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/np_list_divider_bg" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/np_list_divider_bg" />

    <Button
        android:id="@+id/exit_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        android:text="@string/common_exit"
        android:textColor="@color/np_major_text_color"
        android:textSize="@dimen/common_text_size_middle" />

</LinearLayout>